# otus-cpp-course

./: .gitignore  01_1_cin_cout.cpp  01_3_cin_cout_namespace.cpp  05_bool_logic.cpp  06_if.cpp  07_switch.cpp  CMakeLists.txt  README.md  check_value.cpp  guess_the_number.cpp  random_value.cpp
2_var_n_config/: CMakeLists.txt
core/: CMakeLists.txt  main.cpp
functions/: CMakeLists.txt  ask_about_name.cpp  random_value.h  read_write_file.cpp  read_write_file.h
include/: add.hpp  div.hpp  mul.hpp  sub.hpp  var.hpp
libraries/: CMakeLists.txt
src/: add.cpp  div.cpp  main.cpp  mul.cpp  parser.cpp  sub.cpp
